--- a/projects.html
+++ b/projects.html
@@ -46,7 +46,7 @@
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <h2 class="fw-bolder">Projecte PHP</h2>
+                                            <h2 class="fw-bolder">Project PHP</h2>
                                         </div>
                                         <a href="https://github.com/DAW-Cirvianum/projecte-uf1-alexllastanos.git"> <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d" alt="..."/></a>
                                     </div>
